--- a/examples/BeaconstacExample/app/build.gradle
+++ b/examples/BeaconstacExample/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile(name: 'beaconstac-release', ext: 'aar')
     compile 'com.mcxiaoke.volley:library:1.0.16'
     compile 'com.google.android.gms:play-services:8.1.0'
