--- a/examples/BeaconstacExample/app/build.gradle
+++ b/examples/BeaconstacExample/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.0"
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.mobstac.beaconstacexample"
@@ -25,4 +25,7 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.16'
     compile 'com.google.android.gms:play-services:8.1.0'
     compile 'com.crittercism:crittercism-android-agent:5.0.6'
+    compile 'com.google.android.gms:play-services-ads:8.1.0'
+    compile 'com.google.android.gms:play-services-identity:8.1.0'
+    compile 'com.google.android.gms:play-services-gcm:8.1.0'
 }
