--- a/examples/BeaconstacExample/app/build.gradle
+++ b/examples/BeaconstacExample/app/build.gradle
@@ -2,11 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
-
+    buildToolsVersion "23.0.2"
     defaultConfig {
         applicationId "com.mobstac.beaconstacexample"
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 2
         versionName "0.9.7"
@@ -17,12 +16,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile(name: 'beaconstac-release', ext: 'aar')
-    compile 'com.mcxiaoke.volley:library:1.0.16'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.google.android.gms:play-services:8.1.0'
     compile 'com.crittercism:crittercism-android-agent:5.0.6'
     compile 'com.google.android.gms:play-services-ads:8.1.0'
